# cinema

./: README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 4522068f370a_initial_schema.py
app/: configs.py  database.py  manage.py
app/apps/: router.py
app/apps/admin/: admin.py
app/apps/cinema/schemas/models/: booking.py  room.py  schedule.py  seats.py
app/apps/cinema/services/buisness_services/: create_booking.py  get_room.py  get_scheduled.py  get_seats.py
app/apps/cinema/services/infrastructure_services/: booking_service.py  room_service.py  schedule_service.py  seat_service.py
app/apps/cinema/views/: booking.py  rooms.py  router.py
app/core/: settings.py
app/models/: booking.py  movie.py  room.py  schedule.py  seat.py  timestamp_mixin.py
app/utils/: fake_data.py  migrations.py
