
[tool.ruff]
line-length = 120
exclude = ["migrations"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "preserve"
docstring-code-format = true

[tool.poetry]
name = "cinema"
version = "0.1.0"
description = ""
authors = ["Hovhannes <h.haroyan>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.116.0"
ruff = "^0.12.2"
sqlalchemy = "^2.0.41"
pydantic = "^2.11.7"
psycopg = "^3.2.9"
alembic = "^1.16.4"
pydantic-settings = "^2.10.1"
asyncpg = "^0.30.0"
sqladmin = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
